# openmp_bfs_dfs

./: CMakeLists.txt  Graph.cpp  Graph.h  GraphGenerator.cpp  GraphGenerator.h  ParallelGraphTraversal.cpp  ParallelGraphTraversal.h  TestResult.h  main.cpp  tester.h
